<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GameActivity">
    <item
        android:id="@+id/action_menu"
        android:orderInCategory="2"
        android:title="@string/action_menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_pause"
        android:orderInCategory="3"
        android:title="@string/action_pause"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_restart"
        android:orderInCategory="4"
        android:title="@string/action_restart"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="5"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_information"
        android:orderInCategory="6"
        android:title="@string/action_information"
        app:showAsAction="never" />
</menu>